<resources>
    <string name="app_name">Student Mart</string>
    <string name="register">SIGN UP</string>
    <string name="title">Student Mart</string>
    <string name="username">Username or Email*</string>
    <string name="email">Email ID*</string>
    <string name="password">Password*</string>
    <string name="loginBtn">Login</string>
    <string name="signup_link">No account yet? Create one!</string>
    <string name="registerBtn">Register</string>
    <string name="emptyMessage">This field cannot be blank</string>
    <string name="emailValidation">Please enter a valid email address</string>
    <string name="confirmPassword">Confirm Password*</string>
    <string name="location">Address*</string>
    <string name="password_match_error">Entered Passwords do not match!</string>
    <string name="textBookString">Books</string>
    <string name="categorySelect">Select a Category</string>
    <string name="pick_option">What would you like to do?</string>
    <string name="logout_question">Are you sure you want to logout?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_buy_page">BuyPage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
