<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/ap_regText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/ap_fname"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/cherry_swash"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="#009688"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/ap_fname"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_above="@id/ap_username"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/cherry_swash"
        android:hint="First Name*"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textSize="15sp"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/ap_lname"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_above="@id/ap_username"
        android:layout_toRightOf="@+id/ap_fname"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/cherry_swash"
        android:hint="Last Name*"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textSize="15sp"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/ap_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/ap_email"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/cherry_swash"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textSize="15sp"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/ap_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/ap_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/cherry_swash"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="15sp"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/ap_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/cherry_swash"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/ap_confirmpassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/ap_password"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/cherry_swash"
        android:hint="@string/confirmPassword"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/ap_phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="Phone Number*"
        android:inputType="phone"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/cherry_swash"
        android:padding="15dp"
        android:textSize="15sp"
        android:layout_below="@id/ap_confirmpassword"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ap_phone"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_custom"
        android:fontFamily="@font/cherry_swash"
        android:text="@string/registerBtn"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ap_phone"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@id/btn_register"
        android:background="@drawable/btn_custom"
        android:fontFamily="@font/cherry_swash"
        android:text="Cancel"
        android:textColor="@android:color/white" />

</RelativeLayout>
