<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/ap_regText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/cherry_swash"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="#009688"
            android:textSize="36sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ap_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@id/ap_email"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="17dp"
            android:background="@drawable/et_custom"
            android:fontFamily="@font/cherry_swash"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textSize="15sp"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/ap_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@id/ap_password"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="70dp"
            android:background="@drawable/et_custom"
            android:fontFamily="@font/cherry_swash"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textSize="15sp"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/ap_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_custom"
            android:fontFamily="@font/cherry_swash"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="15sp"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/ap_confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/ap_password"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_custom"
            android:fontFamily="@font/cherry_swash"
            android:hint="@string/confirmPassword"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="15sp"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/ap_address"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/ap_confirmpassword"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_custom"
            android:fontFamily="@font/cherry_swash"
            android:hint="@string/location"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:padding="15dp"
            android:textSize="15sp"
            tools:targetApi="o" />

        <AutoCompleteTextView
            android:id="@+id/City"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/ap_address"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_custom"
            android:ems="10"
            android:fontFamily="@font/cherry_swash"
            android:hint="City"
            android:padding="15dp"
            android:textSize="15sp" />

        <AutoCompleteTextView
            android:id="@+id/State"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/City"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_custom"
            android:ems="10"
            android:fontFamily="@font/cherry_swash"
            android:hint="State"
            android:padding="15dp"
            android:textSize="15sp" />

        <ImageButton
            android:id="@+id/addImageButton"
            android:layout_width="374dp"
            android:layout_height="58dp"
            android:layout_below="@id/State"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/et_custom"
            android:text="Upload Profile Picture" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/State"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:clickable="false"
            android:fontFamily="@font/cherry_swash"
            android:hint="Click here to Upload Profile Picture"
            android:padding="10dp"
            android:textSize="15dp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/addImageButton"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_custom"
            android:fontFamily="@font/cherry_swash"
            android:text="Update"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/addImageButton"
            android:layout_marginStart="52dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/btn_register"
            android:background="@drawable/btn_custom"
            android:fontFamily="@font/cherry_swash"
            android:text="Cancel"
            android:textColor="@android:color/white" />

    </RelativeLayout>
</ScrollView>